--- a/GoDaddy/Godaddy.ipynb
+++ b/GoDaddy/Godaddy.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19688968",
+   "id": "d03c7e4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import random\n",
     "import time\n",
+    "import pandas as pd\n",
     "\n",
     "from GPMLoginAPI import GPMLoginAPI\n",
     "from selenium.webdriver.chrome import service\n",
@@ -20,7 +21,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcb551ff",
+   "id": "929acbd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STATUS = { 0: \"Taken\",\n",
+    "          38: \"Place Bid\",\n",
+    "          33: \"Make Offer\",\n",
+    "          39: \"Buy It Now\",\n",
+    "          23: \"Buy It Now\",\n",
+    "          10: \"Get It\",\n",
+    "          15: \"Get It\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead5fcf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,40 +48,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56903870",
+   "id": "d088eae8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "domains = open('domain_go.txt').read().splitlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ced35f97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "domains = open('domain_go.txt').read().splitlines()\n",
     "len(domains)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c7a1e7",
+   "id": "805d6527",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# API GPM\n",
     "api = GPMLoginAPI('http://127.0.0.1:19995')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ea2bc5",
+   "id": "5c6f2e56",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tạo proifile GPM\n",
     "def init_driver():\n",
     "    profileid = api.Create(time.time())['profile_id']\n",
     "    startedResult = api.Start(profileid)\n",
@@ -80,12 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f276c48",
+   "id": "27eeced2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load cookies\n",
     "def reload_cookies():\n",
     "    driver.get(f'https://www.godaddy.com/domainsearch/find?checkAvail=1&domainToCheck={random.choice(domains)}')\n",
+    "    # Có thể optimize bằng chờ load element thay vì mặc định 10s\n",
     "    time.sleep(10)\n",
     "    return {\"bm_sz\": driver.get_cookie(\"bm_sz\")['value'],\n",
     "          \"visitor\": driver.get_cookie(\"visitor\")['value'],\n",
@@ -95,10 +107,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcdc45f1",
+   "id": "8222a31e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Proxies Debug\n",
     "proxies = {'http': 'http://192.168.113.6:1234',\n",
     "           'https': 'http://192.168.113.6:1234'}"
    ]
@@ -106,43 +119,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "671636ed",
+   "id": "2255d806",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data lưu list json dự liệu\n",
     "data = []\n",
+    "# Biến đếm lỗi.\n",
     "c = 0\n",
+    "# Khởi tạo GPM\n",
     "driver, profile_id = init_driver()\n",
+    "# Lấy cookies\n",
     "cookies = reload_cookies()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d8adf63",
+   "id": "80527272",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "for domain in domains:\n",
+    "    # Nếu domain đã get bỏ qua\n",
     "    if domain in [domain['ClientRequestIn']['DomainName'] for domain in data]:\n",
     "        continue\n",
     "    while True:\n",
     "        try:\n",
     "            r = requests.get(f'https://www.godaddy.com/domainfind/v1/search/exact?req_id={int(time.time() * 1000)}&key=dpp_search&q={domain}', cookies=cookies, headers=HEADERS)\n",
     "            print(r.status_code)\n",
+    "            # Hạn chế IP\n",
     "            if r.status_code == 429:\n",
     "                print('IP')\n",
     "                raise\n",
+    "            # Hạn chế Session và Browser\n",
     "            elif r.status_code == 403:\n",
     "                c += 1\n",
+    "                # Lỗi 403 quá 3 lần thay profile GPM\n",
     "                if c >= 3:\n",
     "                    driver.close()\n",
     "                    api.Delete(profile_id)\n",
     "                    driver, profile = init_driver()\n",
     "                    c = 0\n",
+    "                # Refresh lại cookies\n",
     "                cookies = reload_cookies()\n",
+    "            # Lấy dự liệu thành công\n",
     "            elif r.status_code == 200:\n",
     "                data.append(r.json())\n",
     "                c = 0\n",
@@ -155,7 +178,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd28f944",
+   "id": "ede5af46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\"\"\" \n",
+    "Xử lý dữ liệu\n",
+    "Có 2 dạng url:\n",
+    "Get It\n",
+    "https://auctions.godaddy.com/trpItemListing.aspx?src=dpp&miid={AuctionId}&itc=dpp_absol1\n",
+    "Make Offer\n",
+    "https://www.godaddy.com/domain-auctions/{domain thay '.' thành '-'}-{AuctionId}?src=dpp&itc=dpp_absol1\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844998a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data = []\n",
+    "for data_ in data:\n",
+    "    domain_name = data_['ClientRequestIn']['DomainName']\n",
+    "    status = STATUS[data_['ExactMatchDomain']['AuctionTypeId']]\n",
+    "    price = data_['ExactMatchDomain']['PriceDisplay']\n",
+    "    auctionid = data_['ExactMatchDomain']['AuctionId']\n",
+    "    if status == 'Get It':\n",
+    "        url = f'https://auctions.godaddy.com/trpItemListing.aspx?src=dpp&miid={auctionid}&itc=dpp_absol1'\n",
+    "    elif status == 'Make Offer':\n",
+    "        url = f\"https://www.godaddy.com/domain-auctions/{domain_name.replace('.', '-')}-{auctionid}?src=dpp&itc=dpp_absol1\"\n",
+    "    else:\n",
+    "        url = \"\"\n",
+    "    final_data.append((domain_name, status, price, url))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d931b92",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(final_data, columns = ['Domain Name', 'Status', 'Price', 'URL']).to_csv('ouput.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "405b238d",
    "metadata": {},
    "outputs": [],
    "source": []
