--- a/GoDaddy/Godaddy.ipynb
+++ b/GoDaddy/Godaddy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STATUS = { 0: \"Taken\",\n",
+    "STATUS = { 0: \"Buy It Now\",\n",
     "          38: \"Place Bid\",\n",
     "          33: \"Make Offer\",\n",
     "          39: \"Buy It Now\",\n",
@@ -203,8 +203,8 @@
     "final_data = []\n",
     "for data_ in data:\n",
     "    domain_name = data_['ClientRequestIn']['DomainName']\n",
-    "    status = STATUS[data_['ExactMatchDomain']['AuctionTypeId']]\n",
     "    price = data_['ExactMatchDomain']['PriceDisplay']\n",
+    "    status = STATUS[data_['ExactMatchDomain']['AuctionTypeId']] if price else \"Taken\"\n",
     "    auctionid = data_['ExactMatchDomain']['AuctionId']\n",
     "    if status == 'Get It':\n",
     "        url = f'https://auctions.godaddy.com/trpItemListing.aspx?src=dpp&miid={auctionid}&itc=dpp_absol1'\n",
