--- a/GoDaddy/Godaddy.ipynb
+++ b/GoDaddy/Godaddy.ipynb
@@ -12,6 +12,7 @@
     "import time\n",
     "import pandas as pd\n",
     "\n",
+    "from itertools import cycle\n",
     "from GPMLoginAPI import GPMLoginAPI\n",
     "from selenium.webdriver.chrome import service\n",
     "from selenium.webdriver.chrome.options import Options\n",
@@ -48,6 +49,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c299e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LIST_PROXIES = ['', 'socks5://116.118.50.231:59166', '42.96.47.158:3128', '14.162.146.186:19132']\n",
+    "# Proxy xoay vòng\n",
+    "proxies = cycle(LIST_PROXIES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d088eae8",
    "metadata": {},
    "outputs": [],
@@ -75,15 +88,18 @@
    "outputs": [],
    "source": [
     "# Tạo proifile GPM\n",
-    "def init_driver():\n",
-    "    profileid = api.Create(time.time())['profile_id']\n",
+    "def init_driver(proxy):\n",
+    "    profile_name = time.time()\n",
+    "    profileid = api.Create(profile_name, proxy)['profile_id']\n",
+    "    print(f\"Profile Name: {profile_name}, Proxy: {proxy}, Profile_ID: {profileid}\")\n",
     "    startedResult = api.Start(profileid)\n",
+    "    print('Start')\n",
     "    browserLocation = str(startedResult[\"browser_location\"])\n",
     "    seleniumRemoteDebugAddress = str(startedResult[\"selenium_remote_debug_address\"])\n",
     "    gpmDriverPath = str(startedResult[\"selenium_driver_location\"])\n",
     "    options = Options()\n",
     "    options.debugger_address = seleniumRemoteDebugAddress\n",
-    "    myService  = service.Service(gpmDriverPath)\n",
+    "    myService = service.Service(gpmDriverPath)\n",
     "    return UndetectChromeDriver(service = myService, options=options), profileid"
    ]
   },
@@ -107,28 +123,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8222a31e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Proxies Debug\n",
-    "proxies = {'http': 'http://192.168.113.6:1234',\n",
-    "           'https': 'http://192.168.113.6:1234'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2255d806",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Data lưu list json dự liệu\n",
     "data = []\n",
     "# Biến đếm lỗi.\n",
     "c = 0\n",
+    "# Lấy proxy đầu tiên\n",
+    "proxy = next(proxies)\n",
+    "\n",
     "# Khởi tạo GPM\n",
-    "driver, profile_id = init_driver()\n",
+    "driver, profile_id = init_driver(proxy)\n",
+    "\n",
     "# Lấy cookies\n",
     "cookies = reload_cookies()"
    ]
@@ -148,12 +158,14 @@
     "        continue\n",
     "    while True:\n",
     "        try:\n",
-    "            r = requests.get(f'https://www.godaddy.com/domainfind/v1/search/exact?req_id={int(time.time() * 1000)}&key=dpp_search&q={domain}', cookies=cookies, headers=HEADERS)\n",
+    "            r = requests.get(f'https://www.godaddy.com/domainfind/v1/search/exact?req_id={int(time.time() * 1000)}&key=dpp_search&q={domain}',\n",
+    "                             cookies=cookies, headers=HEADERS, proxies={\"https\": proxy})\n",
     "            print(r.status_code)\n",
     "            # Hạn chế IP\n",
     "            if r.status_code == 429:\n",
     "                print('IP')\n",
-    "                raise\n",
+    "                # Thay proxy\n",
+    "                proxy = next(proxies)\n",
     "            # Hạn chế Session và Browser\n",
     "            elif r.status_code == 403:\n",
     "                c += 1\n",
@@ -230,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405b238d",
+   "id": "1cd2f51e",
    "metadata": {},
    "outputs": [],
    "source": []
